<resources>
    <string name="app_name">Movies</string>

    <!--Navigation page titles-->
    <string name="nav_title_home">Home</string>
    <string name="nav_title_genres">Genres</string>
    <string name="nav_title_favourite">Favourite</string>
    <string name="nav_title_account">Account</string>

    <!--Images descriptions-->
    <string name="description_iv_btn_start_searching">start searching</string>
    <string name="description_rv_most_popular_movies_list">Most popular movies list</string>
    <string name="description_rv_movies_by_period">Movies by chosen period</string>
    <string name="description_rv_movies_for_kids">Movies for kids</string>
    <string name="description_rv_now_in_the_theaters_list">
        Movies in the theaters now
    </string>
    <string name="description_spinner_choose_period">
        Choose period of recent popular movies
    </string>
    <string name="description_open_movies_of_this_genre">Open movies of this genre</string>
    <string name="description_genre_image">Genre image</string>
    <string name="description_open_the_movie_info">Open the movie info</string>
    <string name="description_movie_poster">Movie poster</string>
    <string name="description_btn_add_to_see_later">Button to add to watch later list</string>
    <string name="description_btn_add_to_favorites">Button to add to favorites</string>
    <string name="description_btn_trailer_watch">Search trailers on YouTube button</string>
    <string name="description_btn_register">Button to register with the data your filled</string>
    <string name="description_btn_reset_password">
        Button to reset password with the email you filled
    </string>
    <string name="description_btn_back_to_login">Button to back to login page</string>
    <string name="description_iv_btn_open_personal_page_menu">Open personal page menu</string>

    <!--Views texts-->
    <string name="title_part_for_kids">For kids</string>
    <string name="title_part_most_popular">Most popular</string>
    <string name="title_part_now_in_the_theaters">Now in the theaters</string>
    <string name="title_start_highlighted_period_spinner">Last</string>
    <string name="title_end_highlighted_period_spinner">highlighted</string>
    <string name="title_genres">G E N R E S</string>
    <string name="title_favourites">F A V O U R I T E S</string>
    <string name="btn_login">Login</string>
    <string name="btn_tv_forgot_your_password">Forgot your password?</string>
    <string name="btn_tv_register">Register</string>
    <string name="movie_default_title">No movie name found from API</string>
    <string name="rating_title">Popularity:</string>
    <string name="rating_default_value">9.9</string>
    <string name="title_year_of_issue">Premiere:</string>
    <string name="year_of_issue_default_value">2222</string>
    <string name="title_genre_list">Genres:</string>
    <string name="genre_list_default">
        Dramedy, one more default genre, and more, and once more
    </string>
    <string name="title_overview">Overview:</string>
    <string name="overview_text_itself_value">
        Overview text itself in a very, very, very long version
    </string>
    <string name="btn_tv_see_movie_details">See movie details…</string>
    <string name="title_prefix_movies_by_genre">Genre: </string>
    <string name="title_default_genre_name">Default genre name</string>
    <string name="title_movies_by_query_text">Movies by query \"query\"</string>
    <string name="title_movies_by_query">Movies by query \"%1$s\"</string>
    <string name="title_forgot_your_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="btn_back_to_login">Back to login</string>
    <string name="title_watch_later">Movies I wanted to watch later</string>

    <!--Hint texts-->
    <string name="hint_search_field">search movies…</string>
    <string name="hint_enter_your_email">Enter your email</string>
    <string name="hint_enter_your_password">Enter your password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_register">Register</string>
    <string name="hint_enter_email_to_reset_password">Enter email to reset password</string>

    <!--Spinner list-->
    <string name="spinner_option_month">month</string>
    <string name="spinner_option_week">week</string>
    <string name="spinner_option_year">year</string>
</resources>