<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingStart="@dimen/account_pages_root_padding"
    android:paddingEnd="@dimen/account_pages_root_padding"
    tools:context=".presentation.ui.ResetPasswordFragment">

    <TextView
        android:id="@+id/tvForgotPassTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/reset_password_tv_title_margin_bottom"
        android:text="@string/title_forgot_your_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/account_pages_regular_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputEmailResetPasswordContainer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmailResetPasswordContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_email_to_reset_password"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_alert_circle"
        app:layout_constraintBottom_toTopOf="@+id/btnResetPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmailResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_btn_reset_password"
        android:text="@string/btn_reset_password"
        app:layout_constraintBottom_toTopOf="@+id/btnBackToLogin"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailResetPasswordContainer" />

    <Button
        android:id="@+id/btnBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/reset_password_btn_margin"
        android:contentDescription="@string/description_btn_back_to_login"
        android:text="@string/btn_back_to_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResetPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>