<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.MovieFragment"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            tools:title="@string/movie_default_title">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_movie_poster"
                android:minHeight="@dimen/fragment_movie_app_bar_iv_min_height"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_collapseMode="parallax" />

            <com.severin.movies.presentation.ui.OutlinedTextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:maxLines="1"
                android:text="@string/movie_default_title" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_addToWatchLater2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/floating_btn_side_margin"
        android:contentDescription="@string/description_btn_add_to_see_later"
        android:src="@drawable/bookmark_border"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="top|start"
        tools:src="@drawable/bookmark_filled" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_addToFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/floating_btn_side_margin"
        android:contentDescription="@string/description_btn_add_to_favorites"
        android:src="@drawable/favorite_border"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|end"
        tools:src="@drawable/favorite_filled" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/movie_details_container_padding">

            <TextView
                android:id="@+id/tv_rating_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/movie_details_rating_title_margin_top"
                android:text="@string/rating_title"
                android:textColor="@color/black"
                android:textSize="@dimen/movie_details_primary_text_size"
                app:layout_constraintEnd_toEndOf="@+id/tv_overview_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_rating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_details_values_margin_start"
                android:textSize="@dimen/movie_details_primary_text_size"
                app:layout_constraintStart_toEndOf="@id/tv_rating_title"
                app:layout_constraintTop_toTopOf="@id/tv_rating_title"
                tools:text="@string/rating_default_value" />

            <TextView
                android:id="@+id/tv_year_of_issue_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_year_of_issue"
                android:textColor="@color/black"
                android:textSize="@dimen/movie_details_primary_text_size"
                app:layout_constraintEnd_toEndOf="@+id/tv_overview_title"
                app:layout_constraintTop_toBottomOf="@id/tv_rating_title" />

            <TextView
                android:id="@+id/tv_year_of_issue_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_details_values_margin_start"
                android:textSize="@dimen/movie_details_primary_text_size"
                app:layout_constraintStart_toEndOf="@id/tv_year_of_issue_title"
                app:layout_constraintTop_toTopOf="@id/tv_year_of_issue_title"
                tools:text="@string/year_of_issue_default_value" />

            <TextView
                android:id="@+id/tv_genre_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_genre_list"
                android:textColor="@color/black"
                android:textSize="@dimen/movie_details_primary_text_size"
                app:layout_constraintEnd_toEndOf="@+id/tv_overview_title"
                app:layout_constraintTop_toBottomOf="@id/tv_year_of_issue_value" />

            <TextView
                android:id="@+id/tv_genre_value"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_details_values_margin_start"
                android:textSize="@dimen/movie_details_primary_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_genre_title"
                app:layout_constraintTop_toTopOf="@id/tv_genre_title"
                tools:text="@string/genre_list_default" />

            <TextView
                android:id="@+id/tv_overview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/movie_details_overview_title_margin_top"
                android:text="@string/title_overview"
                android:textColor="@color/black"
                android:textSize="@dimen/movie_details_overview_title_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_genre_value" />

            <TextView
                android:id="@+id/tv_overview_value"
                android:layout_width="@dimen/zero_size"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/movie_details_values_margin_start"
                android:layout_marginTop="@dimen/movie_details_overview_value_margin_top"
                android:textColor="@color/black"
                android:textSize="@dimen/movie_details_overview_value_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_overview_title"
                app:layout_constraintTop_toTopOf="@+id/tv_overview_title"
                tools:text="@string/overview_text_itself_value" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/btn_iv_youtubeTrailerLink"
        android:layout_width="@dimen/movie_details_youtube_btn_width"
        android:layout_height="@dimen/movie_details_youtube_btn_height"
        android:layout_gravity="bottom|center_vertical|center_horizontal|center"
        android:layout_marginBottom="@dimen/movie_details_youtube_btn_margin_bottom"
        android:contentDescription="@string/description_btn_trailer_watch"
        android:src="@drawable/youtube_custom_icon" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>