<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/account_pages_root_padding"
    android:paddingEnd="@dimen/account_pages_root_padding"
    android:background="@color/white"
    tools:context=".presentation.ui.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmailOrLoginContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_your_email"
        app:counterEnabled="true"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_alert_circle"
        app:layout_constraintBottom_toTopOf="@+id/inputPasswordContainer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmailOrLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPasswordContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_your_password"
        app:counterEnabled="true"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_alert_circle"
        app:layout_constraintBottom_toTopOf="@+id/btn_Login"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailOrLoginContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordContainer" />

    <TextView
        android:id="@+id/tv_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_btn_other_options_margin_top"
        android:paddingTop="@dimen/login_btn_tv_padding_top_bottom"
        android:paddingBottom="@dimen/login_btn_tv_padding_top_bottom"
        android:text="@string/btn_tv_forgot_your_password"
        app:layout_constraintStart_toStartOf="@+id/btn_Login"
        app:layout_constraintTop_toBottomOf="@+id/btn_Login" />

    <TextView
        android:id="@+id/tv_registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_btn_other_options_margin_top"
        android:paddingTop="@dimen/login_btn_tv_padding_top_bottom"
        android:paddingBottom="@dimen/login_btn_tv_padding_top_bottom"
        android:text="@string/btn_tv_register"
        app:layout_constraintEnd_toEndOf="@+id/btn_Login"
        app:layout_constraintTop_toBottomOf="@+id/btn_Login" />

</androidx.constraintlayout.widget.ConstraintLayout>